@@ -99,6 +99,8 @@ gnome_program_locate_file               (GnomeProgram    *program,
 #define GNOME_PARAM_MODULE_INFO         "module-info"
 #define GNOME_PARAM_MODULES             "modules"
 #define GNOME_PARAM_POPT_TABLE          "popt-table"
+#define GNOME_PARAM_POPT_FLAGS          "popt-flags"
+#define GNOME_PARAM_POPT_CONTEXT        "popt-context"
 #define GNOME_PARAM_CREATE_DIRECTORIES  "create-directories"
 #define GNOME_PARAM_ESPEAKER            "espeaker"
 #define GNOME_PARAM_ENABLE_SOUND        "enable-sound"
