@@ -1,5 +1,8 @@
 2001-03-21  Martin Baulig  <baulig@suse.de>
 
+	* gnome-program.h (GNOME_PARAM_POPT_FLAGS, GNOME_PARAM_POPT_CONTEXT):
+	New properties.
+
 	* gnome-program.[ch]
 	(gnome_program_module_register, gnome_program_module_registered,
 	gnome_program_module_load): Removed the `GnomeProgram *' argument.
